crates/aranya-policy-lang/tests/snapshots/tests__action_call.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [
        ActionDefinition {
            persistence: Persistent,
            identifier: "ping" @ 12..16,
            arguments: [],
            statements: [],
            span: 5..21,
        },
        ActionDefinition {
            persistence: Persistent,
            identifier: "pong" @ 33..37,
            arguments: [],
            statements: [
                ActionCall(
                    FunctionCall {
                        identifier: "ping" @ 57..61,
                        arguments: [],
                    },
                ) @ 50..63,
            ],
            span: 26..69,
        },
    ],
    effects: [],
    structs: [],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "\n    action ping() {}\n    action pong() {\n        action ping()\n    }\n    ",
}
