crates/aranya-policy-lang/tests/snapshots/tests__block_expression.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [
        ActionDefinition {
            persistence: Persistent,
            identifier: "foo" @ 12..15,
            arguments: [],
            statements: [
                Let(
                    LetStatement {
                        identifier: "x" @ 32..33,
                        expression: Block(
                            [
                                Let(
                                    LetStatement {
                                        identifier: "a" @ 54..55,
                                        expression: Int(
                                            3,
                                        ) @ 58..59,
                                    },
                                ) @ 50..72,
                                Let(
                                    LetStatement {
                                        identifier: "b" @ 76..77,
                                        expression: Int(
                                            4,
                                        ) @ 80..81,
                                    },
                                ) @ 72..94,
                            ],
                            Unwrap(
                                FunctionCall(
                                    FunctionCall {
                                        identifier: "saturating_add" @ 103..117,
                                        arguments: [
                                            Identifier(
                                                "a" @ 118..119,
                                            ) @ 118..119,
                                            Identifier(
                                                "b" @ 121..122,
                                            ) @ 121..122,
                                        ],
                                    },
                                ) @ 103..123,
                            ) @ 96..123,
                        ) @ 36..133,
                    },
                ) @ 28..138,
            ],
            span: 5..139,
        },
    ],
    effects: [],
    structs: [],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "\n    action foo() {\n        let x = {\n            let a = 3\n            let b = 4\n            : unwrap saturating_add(a, b)\n        }\n    }\n    ",
}
