crates/aranya-policy-lang/tests/snapshots/tests__if_expression.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [
        ActionDefinition {
            persistence: Persistent,
            identifier: "test" @ 16..20,
            arguments: [],
            statements: [
                Let(
                    LetStatement {
                        identifier: "b" @ 41..42,
                        expression: InternalFunction(
                            If(
                                Bool(
                                    true,
                                ) @ 48..52,
                                Block(
                                    [],
                                    Int(
                                        1,
                                    ) @ 56..57,
                                ) @ 53..59,
                                Block(
                                    [],
                                    Int(
                                        0,
                                    ) @ 68..69,
                                ) @ 65..71,
                            ),
                        ) @ 45..71,
                    },
                ) @ 37..80,
            ],
            span: 9..81,
        },
    ],
    effects: [],
    structs: [],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "\n        action test() {\n            let b = if true { :1 } else { :0 }\n        }\n    ",
}
