crates/aranya-policy-lang/tests/snapshots/tests__parse_effect_with_field_insertion.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [
        EffectDefinition {
            identifier: "Bar" @ 36..39,
            items: [
                StructRef(
                    "Foo" @ 55..58,
                ),
                Field(
                    EffectFieldDefinition {
                        identifier: "y" @ 72..73,
                        field_type: Int @ 74..77,
                        dynamic: false,
                    },
                ),
            ],
            span: 29..87,
        },
    ],
    structs: [
        StructDefinition {
            identifier: "Foo" @ 7..10,
            items: [
                Field(
                    FieldDefinition {
                        identifier: "x" @ 13..14,
                        field_type: Int @ 15..18,
                    },
                ),
            ],
            span: 0..20,
        },
    ],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "struct Foo { x int }\n        effect Bar {\n            +Foo,\n            y int\n        }\n        ",
}
