crates/aranya-policy-lang/tests/snapshots/tests__parse_enum_definition.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [],
    structs: [],
    enums: [
        EnumDefinition {
            identifier: "Color" @ 5..10,
            variants: [
                "Red" @ 25..28,
                "Green" @ 42..47,
                "Blue" @ 61..65,
            ],
            span: 0..76,
        },
    ],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "enum Color {\n            Red,\n            Green,\n            Blue,\n        }",
}
