crates/aranya-policy-lang/tests/snapshots/tests__parse_ffi_decl.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: decl
---
FunctionDecl {
    identifier: "foo" @ 9..12,
    arguments: [
        Param {
            name: "x" @ 13..14,
            ty: Int @ 16..19,
        },
        Param {
            name: "y" @ 21..22,
            ty: Struct(
                "bar" @ 31..34,
            ) @ 24..34,
        },
    ],
    return_type: Some(
        Bool @ 36..40,
    ),
}
