crates/aranya-policy-lang/tests/snapshots/tests__parse_ffi_structs_enums.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: types
---
FfiTypes {
    structs: [
        StructDefinition {
            identifier: "A" @ 7..8,
            items: [
                Field(
                    FieldDefinition {
                        identifier: "x" @ 23..24,
                        field_type: Int @ 26..29,
                    },
                ),
                Field(
                    FieldDefinition {
                        identifier: "y" @ 43..44,
                        field_type: Bool @ 46..50,
                    },
                ),
            ],
            span: 0..60,
        },
        StructDefinition {
            identifier: "B" @ 77..78,
            items: [],
            span: 70..81,
        },
    ],
    enums: [
        EnumDefinition {
            identifier: "Color" @ 96..101,
            variants: [
                "Red" @ 104..107,
                "White" @ 109..114,
                "Blue" @ 116..120,
            ],
            span: 91..122,
        },
    ],
}
