crates/aranya-policy-lang/tests/snapshots/tests__parse_global_let_statements.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [
        ActionDefinition {
            persistence: Persistent,
            identifier: "foo" @ 57..60,
            arguments: [],
            statements: [
                Let(
                    LetStatement {
                        identifier: "a" @ 81..82,
                        expression: Unwrap(
                            FunctionCall(
                                FunctionCall {
                                    identifier: "add" @ 92..95,
                                    arguments: [
                                        Identifier(
                                            "x" @ 96..97,
                                        ) @ 96..97,
                                        Int(
                                            1,
                                        ) @ 99..100,
                                    ],
                                },
                            ) @ 92..101,
                        ) @ 85..101,
                    },
                ) @ 77..114,
                Let(
                    LetStatement {
                        identifier: "c" @ 118..119,
                        expression: Not(
                            Identifier(
                                "z" @ 123..124,
                            ) @ 123..124,
                        ) @ 122..124,
                    },
                ) @ 114..137,
                Emit(
                    NamedStruct(
                        NamedStruct {
                            identifier: "Bar" @ 142..145,
                            fields: [
                                (
                                    "a" @ 164..165,
                                    Identifier(
                                        "a" @ 167..168,
                                    ) @ 167..168,
                                ),
                                (
                                    "c" @ 186..187,
                                    Identifier(
                                        "c" @ 189..190,
                                    ) @ 189..190,
                                ),
                            ],
                            sources: [],
                        },
                    ) @ 142..205,
                ) @ 137..214,
            ],
            span: 50..215,
        },
    ],
    effects: [],
    structs: [],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [
        GlobalLetStatement {
            identifier: "x" @ 13..14,
            expression: Int(
                42,
            ) @ 17..19,
            span: 9..28,
        },
        GlobalLetStatement {
            identifier: "z" @ 32..33,
            expression: Bool(
                true,
            ) @ 36..40,
            span: 28..50,
        },
    ],
    text: "\n        let x = 42\n        let z = true\n\n        action foo() {\n            let a = unwrap add(x, 1)\n            let c = !z\n            emit Bar {\n                a: a,\n                c: c,\n            }\n        }\n    ",
}
