crates/aranya-policy-lang/tests/snapshots/tests__parse_policy_immutable_facts.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [
        FactDefinition {
            immutable: false,
            identifier: "A" @ 14..15,
            key: [],
            value: [],
            span: 9..21,
        },
        FactDefinition {
            immutable: true,
            identifier: "B" @ 45..46,
            key: [],
            value: [],
            span: 30..52,
        },
    ],
    actions: [],
    effects: [],
    structs: [],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "\n        fact A[]=>{}\n        immutable fact B[]=>{}\n    ",
}
