crates/aranya-policy-lang/tests/snapshots/tests__parse_seal_open.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [],
    structs: [],
    enums: [],
    commands: [
        CommandDefinition {
            persistence: Persistent,
            attributes: [],
            identifier: "Foo" @ 8..11,
            fields: [],
            seal: [
                Return(
                    ReturnStatement {
                        expression: FunctionCall(
                            FunctionCall {
                                identifier: "bar" @ 56..59,
                                arguments: [
                                    Identifier(
                                        "this" @ 60..64,
                                    ) @ 60..64,
                                ],
                            },
                        ) @ 56..65,
                    },
                ) @ 49..78,
            ],
            open: [
                Return(
                    ReturnStatement {
                        expression: FunctionCall(
                            FunctionCall {
                                identifier: "baz" @ 123..126,
                                arguments: [
                                    Identifier(
                                        "envelope" @ 127..135,
                                    ) @ 127..135,
                                ],
                            },
                        ) @ 123..136,
                    },
                ) @ 116..149,
            ],
            policy: [],
            recall: [],
            span: 0..160,
        },
    ],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "command Foo {\n            seal {\n                return bar(this)\n            }\n\n            open {\n                return baz(envelope)\n            }\n        }",
}
